# serde-prefix-all

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: test_prefix.rs
