[package]
name = "serde-prefix-all"
version = "0.1.0"
authors = [
    "Jonathan Sundqvist <jonathan@argpar.se>",
    "Zeeshan Ali Khan <zeeshanak@gnome.org>",
]
edition = "2021"
description = "Attribute macro to add a prefix to all struct fields & enum variants"
keywords = ["serde"]
license = "MIT"
repository = "https://github.com/zeenix/serde-prefix-all"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", default-features = false, features = [
    "derive",
    "parsing",
    "proc-macro",
    "printing",
] }
quote = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
